--- a/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/index.html.twig
@@ -3,50 +3,123 @@
 
 {% extends '::base.html.twig' %}
 
+{% block css %}
+<link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
+{% endblock %}
+
+{% block js %}
+<script src="/bundles/ephputility/js/commons/sugar-1.3.9.min.js" type="text/javascript"></script>
+<script src="/bundles/ephputility/js/functions.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ url('bazinga_jstranslation_js') }}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
         <!-- BEGIN SAMPLE TABLE PORTLET-->
         <div class="portlet box yellow">
             <div class="portlet-title">
                 <div class="caption"><i class="fa fa-envelope-o"></i>Nuovi contatti</div>
                 <div class="tools">
                     <a href="javascript:;" class="collapse"></a>
+{#
                     <a href="#portlet-config" data-toggle="modal" class="config"></a>
                     <a href="javascript:;" class="reload"></a>
+#}
                 </div>
             </div>
             <div class="portlet-body">
                 <div class="table-responsive">
                     <table class="table table-striped table-condensed table-hover">
-                    <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>Email</th>
-                            <th>Data contatto</th>
-                            <th>Contattato</th>
-                            <th>Note</th>
-                            <th width="40" class="TAC">Op.</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Email</th>
+                                <th>Data contatto</th>
+                                <th width="40" class="TAC">Op.</th>
+                            </tr>
+                        </thead>
+                        <tbody>
                     {% for entity in pagination %}
-                        <tr>                            
-                            <td><a href="{{ path('contatti_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                            <td>{{ entity.email }}</td>
-                            <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>{% if entity.contattato %}{{ entity.contattato|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>{{ entity.note }}</td>
-                            <td><a href="{{ path('contatti_show', { 'id': entity.id }) }}">Apri</a></td>
-                        </tr>
+                            <tr>                            
+                                <td><a href="{{ path('contatti_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                                <td>{{ entity.email }}</td>
+                                <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                <td><a href="{{ path('contatti_show', { 'id': entity.id }) }}">Apri</a></td>
+                            </tr>
                     {% endfor %}
-                    </tbody>
+                        </tbody>
                     </table>
                 </div>
                 {{ knp_pagination_render(pagination) }}
             </div>
         </div>
         <!-- END SAMPLE TABLE PORTLET-->
+    </div>
+    <div class="col-md-6">
+        <!-- BEGIN SAMPLE TABLE PORTLET-->
+        <div class="portlet box green">
+            <div class="portlet-title">
+                <div class="caption"><i class="fa fa-envelope"></i>Email inviate</div>
+                <div class="tools">
+                    <a href="javascript:;" class="collapse"></a>
+{#
+                    <a href="#portlet-config" data-toggle="modal" class="config"></a>
+                    <a href="javascript:;" class="reload"></a>
+#}
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="table-responsive">
+                    <table class="table table-striped table-condensed table-hover">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>Subject</th>
+                                <th>Inviata il</th>
+                                <th width="40" class="TAC">Op.</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                    {% for entity in messaggi %}
+                            <tr>                            
+                                <td>{{ entity.id }}</td>
+                                <td>{{ entity.subject }}</td>
+                                <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
+                                <td><button class="btn green btn-xs" onclick="$('#body-{{ entity.id }}').toggle();">Leggi</button></td>
+                            </tr>
+                            <tr id="body-{{ entity.id }}" class="no-display">                            
+                                <td colspan="4">{{ entity.body|nl2br }}</td>
+                            </tr>
+                    {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {{ knp_pagination_render(pagination) }}
+            </div>
+        </div>
+        <!-- END SAMPLE TABLE PORTLET-->
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <!-- BEGIN SAMPLE TABLE PORTLET-->
+        <div class="portlet box red">
+            <div class="portlet-title">
+                <div class="caption"><i class="fa fa-envelope"></i>Scrivi email a tutti</div>
+                <div class="tools">
+                    <a href="javascript:;" class="expand"></a>
+                </div>
+            </div>
+            <div class="portlet-body display-hide">
+                {% form_theme form 'MetronicAdminBundle::form/empty.html.twig' %}
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                {{ form_end(form) }}
+            </div>
+        </div>
+        <!-- END SAMPLE TABLE PORTLET-->
+
     </div>
 </div>
 {% endblock %}
