--- a/src/WSP/PromoBundle/Resources/views/Contatto/show.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Contatto/show.html.twig
@@ -1,21 +1,87 @@
 {% set page_title = "Contatto" %}
+{% set page_subtitle = '<i class="fa fa-envelope-o" style="font-size: 2em;"></i>' %}
 
 {% extends '::base.html.twig' %}
 
+{% block css %}
+<link href="/bundles/ephputility/css/utility.css" rel="stylesheet" type="text/css"/>
+{% endblock %}
+
+{% block js %}
+<script src="/bundles/ephputility/js/commons/sugar-1.3.9.min.js" type="text/javascript"></script>
+<script src="/bundles/ephputility/js/functions.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ url('bazinga_jstranslation_js') }}"></script>
+{% endblock %}
+
+{% block ready_js %}
+    autoupdateDiv('autoupdate');
+{% endblock %}
+
 {% block content %}
-<div class="page-header">
-    <div class="icon">
-        <span class="ico-cog"></span>
+<div class="row">
+    <div class="col-md-6">
+        <!-- BEGIN SAMPLE TABLE PORTLET-->
+        <div class="portlet box yellow">
+            <div class="portlet-title">
+                <div class="caption"><i class="fa fa-envelope-o"></i>Riepilogo</div>
+                <div class="tools">
+                    <a href="javascript:;" class="collapse"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="table-responsive">
+                    <table class="table table-striped table-condensed table-hover">
+                        <tbody>
+                            <tr>
+                                <th>Email</th>
+                                <td>{{ entity.email }}</td>
+                            </tr>
+                            <tr>                            
+                                <th>Data contatto</th>
+                                <td>{% if entity.createdAt %}{{ entity.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            </tr>
+                            <tr>                            
+                                <th>Contattato</th>
+                                <td>{% if entity.contattato %}{{ entity.contattato|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <!-- END SAMPLE TABLE PORTLET-->
     </div>
-    <h1>Contatto <small>Dettagli</small></h1>
+    <div class="col-md-6">
+        <!-- BEGIN SAMPLE TABLE PORTLET-->
+        <div class="portlet box red">
+            <div class="portlet-title">
+                <div class="caption"><i class="fa fa-pencil"></i>Note</div>
+                <div class="tools">
+                    <a href="javascript:;" class="collapse"></a>
+                </div>
+            </div>
+            <div class="portlet-body">
+                <div class="typography-big autoupdate" contenteditable="true" name="note" route="contatti_note" route-param='{"id":{{ entity.id }}}'>
+                    {{ entity.note|raw }}
+                </div>
+            </div>
+        </div>
+        <!-- END SAMPLE TABLE PORTLET-->
+    </div>
 </div>
+
+<a href="{{ path('contatti') }}">
+    <span class="label label-inverse">Torna indietro</span>
+</a>
+
+{#
 <div class="row-fluid">
     <div class="span6">
         <div class="block">
             <table class="table">
                 <tbody>                    <tr>
                         <th>Id</th>
-                        <td>{{ entity.id }}</td>
+                        <td></td>
                     </tr>                    <tr>
                         <th>Email</th>
                         <td>{{ entity.email }}</td>
@@ -27,7 +93,7 @@
                         <td>{{ entity.risposta }}</td>
                     </tr>                    <tr>
                         <th>Note</th>
-                        <td>{{ entity.note }}</td>
+                        <td></td>
                     </tr>                    <tr>
                         <th>Createdat</th>
                         <td>{{ entity.createdAt|date('Y-m-d H:i:s') }}</td>
@@ -40,9 +106,6 @@
         </div>
     </div>
 </div>
-
-<a href="{{ path('contatti') }}">
-    <span class="label label-inverse">Torna indietro</span>
-</a>
+#}
 
 {% endblock %}
