--- a/src/WSP/ACLBundle/Resources/views/Negozio/form.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Negozio/form.html.twig
@@ -15,7 +15,7 @@
 <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 <script src="/bundles/metronicadmin/plugins/gmaps/gmaps.js" type="text/javascript"></script>
 <script src="/bundles/wspacl/js/step{{ step }}.js" type="text/javascript"></script>
-<script type="text/javascript" src="{{ url('bazinga_jstranslation_js', { 'domain_name': 'WSPACL' }) }}"></script>
+<script type="text/javascript" src="{{ url('bazinga_jstranslation_js', { 'domain': 'WSPACL' }) }}"></script>
 {% endblock %}
 
 {% block ready_js %}
