--- a/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
+++ b/src/WSP/PromoBundle/Resources/views/Default/simple.html.twig
@@ -15,7 +15,7 @@
 <script src="/bundles/wsppromo/js/vertical_justify.js" type="text/javascript"></script>
 <script src="/bundles/wsppromo/js/contact_form.js" type="text/javascript"></script>
 <script src="/bundles/ephputility/js/functions.js" type="text/javascript"></script>
-<script type="text/javascript" src="{{ url('bazinga_jstranslation_js', { 'domain_name': 'WSPPromo' }) }}"></script>
+<script type="text/javascript" src="{{ url('bazinga_jstranslation_js', { 'domain': 'WSPPromo' }) }}"></script>
 {% endblock %}
 
 {% block ready_js %}
