--- a/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
+++ b/src/WSP/ACLBundle/Resources/views/Security/login.html.twig
@@ -47,7 +47,7 @@ Translator.locale = 'it'
             <input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}"  id="password" name="_password" />
         </div>
     </div>
-    <div class="form-actions">
+    <div class="form-actions" style="text-align: left">
         <label class="checkbox" for="remember_me">
             <input type="checkbox" id="remember_me" name="_remember_me" value="on" />{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
         </label>
@@ -56,10 +56,12 @@ Translator.locale = 'it'
         </button>            
     </div>
     <p>{{ 'login.social'|trans({}, 'WSPACL') }}</p>
-    <ul class="social-icons margin-top-20">
-        <li><a href="#" data-original-title="Facebook" class="facebook"></a></li>
-        <li><a href="#" data-original-title="Twitter" class="twitter"></a></li>
-    </ul>
+    <div class="form-actions">
+        <ul class="social-icons margin-top-20">
+            <li><a href="#" data-original-title="Facebook" class="facebook"></a></li>
+            <li><a href="#" data-original-title="Twitter" class="twitter"></a></li>
+        </ul>
+    </div>
     <div class="create-account">
         <h4>{{ 'forget.question'|trans({}, 'WSPACL') }}</h4>
         <p>
