--- a/src/WSP/AdminBundle/Resources/views/layout/footerEmpty.html.twig
+++ b/src/WSP/AdminBundle/Resources/views/layout/footerEmpty.html.twig
@@ -1,5 +1,3 @@
-{#<!-- BEGIN FOOTER -->
 <div class="copyright">
-
+    2014 &copy; World Sticker Price di Giacomo Orlandi - Via di Montenero, 324 57128 Livorno - P.IVA 01633260490
 </div>
-<!-- END FOOTER -->#} 
